--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ on:
 
 env:
   PROJECT_ID: iot-project-395409 # TODO: update Google Cloud project id
-  SERVICE: MESHER # TODO: update Cloud Run service name
+  SERVICE: mesher # TODO: update Cloud Run service name
   REGION: us-central1-a # TODO: update Cloud Run service region
 
 jobs:
