--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ on:
 env:
   PROJECT_ID: iot-project-395409 # TODO: update Google Cloud project id
   SERVICE: mesher # TODO: update Cloud Run service name
-  REGION: us-central1-a # TODO: update Cloud Run service region
+  REGION: us-central1 # TODO: update Cloud Run service region
 
 jobs:
   deploy:
